--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -31,7 +31,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
+motd=§r              §5§l(MSX)  §dJuanviSpanish Server§r\n          §f§nJUEGA BIEN
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -57,5 +57,5 @@ spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
-view-distance=10
+view-distance=64
 white-list=false
