--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Apr 03 11:07:36 UTC 2025
+#Thu Apr 03 11:21:31 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -15,7 +15,7 @@ enforce-secure-profile=true
 enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
-function-permission-level=2
+function-permission-level=1
 gamemode=survival
 generate-structures=true
 generator-settings={}
@@ -31,7 +31,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dJuanviSpanish Server§r\n          §f§nJUEGA BIEN
+motd=§r              §5§l  §dJuanviSpanish Server§r\n          §f§n              JUEGA BIEN                      
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -57,5 +57,5 @@ spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
-view-distance=64
+view-distance=10
 white-list=false
