--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Apr 03 11:21:31 UTC 2025
+#Thu Apr 03 11:44:32 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -47,7 +47,7 @@ resource-pack=
 resource-pack-id=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip=
+server-ip=JuanviServer.mc
 server-port=25565
 simulation-distance=10
 spawn-animals=true
